--- a/contact.html
+++ b/contact.html
@@ -155,12 +155,12 @@
                 <div class="footer-col">
                     <h4>follow us</h4>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/sandesh.acharya.5201"><ion-icon name="logo-facebook"></ion-icon></a>
-                        <a href="https://www.linkedin.com/in/sandesh-acharya-a1a0b1256/"><ion-icon
+                        <a href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
+                        <a href="https://www.linkedin.com/in/ion-icon
                                 name="logo-linkedin"></ion-icon></a>
-                        <a href="https://www.instagram.com/sandesh.acharya.5201/"><ion-icon
+                        <a href="https://www.instagram.com//"><ion-icon
                                 name="logo-instagram"></ion-icon></a>
-                        <a href="https://github.com/sandeshacharya2" target="_blank"><ion-icon
+                        <a href="https://github.com/" target="_blank"><ion-icon
                                 name="logo-github"></ion-icon></a>
                     </div>
                 </div>
