--- a/home.html
+++ b/home.html
@@ -21,6 +21,10 @@
             <ul id="navbar">
                 <li><a class="active" href="home.html">Home</a></li>
                 <li>
+                    <a href="#">Game</a>
+                    <ul class="submenu">
+                        <li><a href="Quiz.html">Quiz Game</a></li>
+                    </ul>
                     <a href="#">Services</a>
                     <ul class="submenu">
                         <li><a href="#">NOTICE</a></li>
