--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="#">Service</a>
                     <ul class="submenu">
                         <li><a href="#">NOTICE</a></li>
                         <li><a href="#">EVENT</a></li>
