--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
                 <li>
                     <a href="#">Game</a>
                     <ul class="submenu">
-                        <li><a href="Quiz.html">Quiz Game</a></li>
+                        <li><a href="quiz.html">Quiz Game</a></li>
                     </ul>
                 </li>
                 <li>
