--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="admin.html" trage="_blank">Admin</a></li>
             </ul>            
         </div>
     </header>
