--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="admin.html" target ="_blank">Admin</a></li>
+                <li><a href="admin_login.html" target ="_blank">Admin</a></li>
             </ul>            
         </div>
     </header>
