--- a/Admin_login.html
+++ b/Admin_login.html
@@ -117,7 +117,7 @@
 		// Check if email matches default email
 		if (email.value !== defaultEmail) {
 			email.style.border = "1px solid red";
-			email_error.textContent = "Email does not match the default email.";
+			email_error.textContent = "Email does not match !";
 			email_error.style.display = "block";
 			email.focus();
 			return false;
@@ -125,7 +125,7 @@
 		// Check if password matches default password
 		if (password.value !== defaultPassword) {
 			password.style.border = "1px solid red";
-			pass_error.textContent = "Password does not match the default password.";
+			pass_error.textContent = "Password does not match !";
 			pass_error.style.display = "block";
 			password.focus();
 			return false;
