--- a/Admin_login.html
+++ b/Admin_login.html
@@ -109,7 +109,7 @@
         password.addEventListener('textInput', pass_Verify);
 
         const defaultEmail = "sunarsherbahadur9@gmail.com";
-        const defaultPassword = "Sijan946781@#%";
+        const defaultPassword = "Sijan02143";
 
         function validated() {
             // Check if email matches default email
