--- a/Admin_login.html
+++ b/Admin_login.html
@@ -90,7 +90,7 @@
 		<h1 class="label">User Login</h1>
 		<form class="login_form"  onsubmit="return validated()">
 			<div class="font">Email or Phone</div>
-			<input autocomplete="off" type="text" name="email">
+			<input type="email" name="email">
 			<div id="email_error">Please fill up your Email or Phone</div>
 			<div class="font font2">Password</div>
 			<input type="password" name="password">
