--- a/Admin_login.html
+++ b/Admin_login.html
@@ -88,7 +88,7 @@
 <body>
 	<div class="container">
 		<h1 class="label">User Login</h1>
-		<form class="login_form"  onsubmit="return validated()">
+		<form class="login_form" method="post" onsubmit="return validated()">
 			<div class="font">Email or Phone</div>
 			<input type="email" name="email">
 			<div id="email_error">Please fill up your Email or Phone</div>
