--- a/Admin_login.html
+++ b/Admin_login.html
@@ -80,13 +80,15 @@
 			border: 1px solid #EF9A9A;
 			display: none;
 		}
-		
-		
+		#email_error, #pass_error {
+            color: red;
+            display: none;
+        }	
 		
 	</style>
 </head>
 <body>
-	<form name="form">
+   <form name="form" id="loginForm">
         <label for="email">Email:</label>
         <input type="text" name="email" id="email">
         <div id="email_error">Invalid email.</div>
@@ -95,10 +97,10 @@
         <input type="password" name="password" id="password">
         <div id="pass_error">Invalid password.</div>
         <br>
-        <button type="button" onclick="validated()">Submit</button>
+        <button type="submit">Submit</button>
     </form>
-	<script>
-	var email = document.forms['form']['email'];
+ <script>
+        var email = document.forms['form']['email'];
         var password = document.forms['form']['password'];
 
         var email_error = document.getElementById('email_error');
@@ -110,26 +112,40 @@
         const defaultEmail = "sunarsherbahadur9@gmail.com";
         const defaultPassword = "Sijan946781@#%";
 
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the form from submitting
+
+            if (validated()) {
+                window.location.href = "admin.html"; // Redirect if validation passes
+            }
+        });
+
         function validated() {
-            // Check if email matches default email
+            let valid = true;
+
             if (email.value !== defaultEmail) {
                 email.style.border = "1px solid red";
-                email_error.textContent = "Email does not match !";
+                email_error.textContent = "Email does not match the default email.";
                 email_error.style.display = "block";
                 email.focus();
-                return false;
+                valid = false;
+            } else {
+                email.style.border = "1px solid silver";
+                email_error.style.display = "none";
             }
-            // Check if password matches default password
+
             if (password.value !== defaultPassword) {
                 password.style.border = "1px solid red";
-                pass_error.textContent = "Password does not match !";
+                pass_error.textContent = "Password does not match the default password.";
                 pass_error.style.display = "block";
                 password.focus();
-                return false;
+                valid = false;
+            } else {
+                password.style.border = "1px solid silver";
+                pass_error.style.display = "none";
             }
-            // Redirect to admin.html if email and password match
-            window.location.href = "admin.html";
-            return false;
+
+            return valid;
         }
 
         function email_Verify() {
@@ -147,6 +163,6 @@
                 return true;
             }
         }
-	</script>
+    </script>
 </body>
 </html>
