--- a/quiz.html
+++ b/quiz.html
@@ -33,7 +33,7 @@
             <div class="button-container">
                 <button class="right-answer" id="btnRight">First Attempt</button>
                 <button class="show-answer" id="btnShow">Show Answer</button>
-                <button class="pass" id="btnPass">Pass</button>
+                <button class="pass" id="btnPass">Wrong</button>
                 <button class="score1" id="btnscore1">Pass Attempt</button>
             </div>
         </div>
