--- a/Admin_login.html
+++ b/Admin_login.html
@@ -89,7 +89,7 @@
 <body>	
 	<div class="container">
 		<h1 class="label">Admin Login</h1>
-		<form class="login_form" name="form" id="loginForm" method="post">
+		<form class="login_form" name="form" id="loginForm">
 			<label class="font" for="email">Email:</label>
 			<input type="email" name="email" id="email">
 			<div id="email_error">Invalid email.</div>
