--- a/Admin_login.html
+++ b/Admin_login.html
@@ -1,157 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Validated Login Form</title>
-	<style>
-		*{
-			padding: 0;
-			margin: 0;
-		}
-		body{
-			background: url(bg_img.jpg) no-repeat;
-			background-size: cover;
-			align-items: center;
-			justify-content: center;
-			display: flex;
-			font-family: sans-serif;
-		}
-		.container{
-			position: relative;
-			margin-top: 100px;
-			width: 450px;
-			height: auto;
-			background: #dedede;
-			border-radius: 5px;
-		}
-		.label{
-			padding: 20px 130px;
-			font-size: 30px;
-			font-weight: bold;
-			color: #130f40;
-		}
-		.login_form{
-			padding: 20px 40px;
-		}
-		.login_form .font{
-			font-size: 18px;
-			font-weight: bold;
-			color: #130f40;
-			margin: 5px 0;
-		}
-		.login_form input{
-			height: 40px;
-			width: 350px;
-			padding: 0 5px;
-			font-size: 18px;
-			outline: none;
-			border: 1px solid silver;
-		}
-		.login_form .font2{
-			margin-top: 30px;
-			font-weight: bold;
-		}
-		.login_form button{
-			margin: 45px 0 30px 0;
-			height: 45px;
-			width: 365px;
-			font-size: 20px;
-			color: white;
-			outline: none;
-			cursor: pointer;
-			font-weight: bold;
-			background: #1A237E;
-			border-radius: 3px;
-			border: 1px solid #3949AB;
-			transition: .5s;
-		}
-		.login_form button:hover{
-			background: #151c6a;
-		}
-		.login_form #email_error,
-		.login_form #pass_error{
-			margin-top: 5px;
-			width: 345px;
-			font-size: 18px;
-			color: #C62828;
-			background: rgba(255,0,0,0.1);
-			text-align: center;
-			padding: 5px 8px;
-			border-radius: 3px;
-			border: 1px solid #EF9A9A;
-			display: none;
-		}
-		
-		
-		
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email and Password Validation</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f2f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .form-container {
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+
+        .form-container h2 {
+            margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
+            text-align: center;
+        }
+
+        .form-container label {
+            font-weight: bold;
+            color: #555;
+        }
+
+        .form-container input[type="text"],
+        .form-container input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0 15px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 16px;
+            box-sizing: border-box;
+            transition: border-color 0.3s ease;
+        }
+
+        .form-container input[type="text"]:focus,
+        .form-container input[type="password"]:focus {
+            border-color: #007bff;
+            outline: none;
+        }
+
+        .form-container button {
+            width: 100%;
+            padding: 12px;
+            background-color: #007bff;
+            border: none;
+            border-radius: 4px;
+            color: #fff;
+            font-size: 18px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .form-container button:hover {
+            background-color: #0056b3;
+        }
+
+        #email_error,
+        #pass_error {
+            color: red;
+            margin-bottom: 15px;
+            display: none;
+            font-size: 14px;
+        }
+    </style>
 </head>
-<body>	
-	<div class="container">
-		<h1 class="label">Admin Login</h1>
-		<form class="login_form" name="form" id="loginForm">
-			<label class="font" for="email">Email:</label>
-			<input type="email" name="email" id="email">
-			<div id="email_error">Invalid email.</div>
-			<br>
-			<label class="font font2" for="password">Password:</label>
-			<input type="password" name="password" id="password">
-			<div id="pass_error">Invalid password.</div>
-			<br>
-			<button type="submit">Submit</button>
-		</form>
-		</div>	
+<body>
+    <div class="form-container">
+        <h2>Login</h2>
+        <form name="form" id="loginForm">
+            <label for="email">Email:</label>
+            <input type="text" name="email" id="email">
+            <div id="email_error">Invalid email.</div>
 
-	<script>
-			//Validtion Code For Inputs
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password">
+            <div id="pass_error">Invalid password.</div>
 
-	var email = document.forms['form']['email'];
-	var password = document.forms['form']['password'];
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 
-	var email_error = document.getElementById('email_error');
-	var pass_error = document.getElementById('pass_error');
+    <script>
+        var email = document.forms['form']['email'];
+        var password = document.forms['form']['password'];
 
-	email.addEventListener('textInput', email_Verify);
-	password.addEventListener('textInput', pass_Verify);
+        var email_error = document.getElementById('email_error');
+        var pass_error = document.getElementById('pass_error');
 
-	const defaultEmail = "sunarsherbahadur9@gmail.com";
-	const defaultPassword = "Sijan02143";
+        email.addEventListener('textInput', email_Verify);
+        password.addEventListener('textInput', pass_Verify);
 
-	function validated() {
-		// Check if email matches default email
-		if (email.value !== defaultEmail) {
-			email.style.border = "1px solid red";
-			email_error.textContent = "Email does not match the default email.";
-			email_error.style.display = "block";
-			email.focus();
-			return false;
-		}
-		// Check if password matches default password
-		if (password.value !== defaultPassword) {
-			password.style.border = "1px solid red";
-			pass_error.textContent = "Password does not match the default password.";
-			pass_error.style.display = "block";
-			password.focus();
-			return false;
-		}
-		return true;
-	}
+        const defaultEmail = "sunarsherbahadur9@gmail.com";
+        const defaultPassword = "Sijan946781@#%";
 
-	function email_Verify() {
-		if (email.value === defaultEmail) {
-			email.style.border = "1px solid silver";
-			email_error.style.display = "none";
-			return true;
-		}
-	}
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the form from submitting
 
-	function pass_Verify() {
-		if (password.value === defaultPassword) {
-			password.style.border = "1px solid silver";
-			pass_error.style.display = "none";
-			return true;
-		}
-	}
-	</script>
+            if (validated()) {
+                window.location.href = "admin.html"; // Redirect if validation passes
+            }
+        });
+
+        function validated() {
+            let valid = true;
+
+            if (email.value !== defaultEmail) {
+                email.style.border = "1px solid red";
+                email_error.textContent = "Email does not match the default email.";
+                email_error.style.display = "block";
+                email.focus();
+                valid = false;
+            } else {
+                email.style.border = "1px solid silver";
+                email_error.style.display = "none";
+            }
+
+            if (password.value !== defaultPassword) {
+                password.style.border = "1px solid red";
+                pass_error.textContent = "Password does not match the default password.";
+                pass_error.style.display = "block";
+                password.focus();
+                valid = false;
+            } else {
+                password.style.border = "1px solid silver";
+                pass_error.style.display = "none";
+            }
+
+            return valid;
+        }
+
+        function email_Verify() {
+            if (email.value === defaultEmail) {
+                email.style.border = "1px solid silver";
+                email_error.style.display = "none";
+                return true;
+            }
+        }
+
+        function pass_Verify() {
+            if (password.value === defaultPassword) {
+                password.style.border = "1px solid silver";
+                pass_error.style.display = "none";
+                return true;
+            }
+        }
+    </script>
 </body>
 </html>
