--- a/Admin_login.html
+++ b/Admin_login.html
@@ -81,7 +81,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Login</h2>
+        <h2>Admin Login</h2>
         <form name="form" id="loginForm">
             <label for="email">Email:</label>
             <input type="text" name="email" id="email">
@@ -91,7 +91,7 @@
             <input type="password" name="password" id="password">
             <div id="pass_error">Invalid password.</div>
 
-            <button type="submit">Submit</button>
+            <button type="submit">Login</button>
         </form>
     </div>
 
@@ -106,7 +106,7 @@
         password.addEventListener('textInput', pass_Verify);
 
         const defaultEmail = "sunarsherbahadur9@gmail.com";
-        const defaultPassword = "Sijan946781@#%";
+        const defaultPassword = "Sijan02143";
 
         document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault(); // Prevent the form from submitting
@@ -121,7 +121,7 @@
 
             if (email.value !== defaultEmail) {
                 email.style.border = "1px solid red";
-                email_error.textContent = "Email does not match the default email.";
+                email_error.textContent = "Email does not match !";
                 email_error.style.display = "block";
                 email.focus();
                 valid = false;
@@ -132,7 +132,7 @@
 
             if (password.value !== defaultPassword) {
                 password.style.border = "1px solid red";
-                pass_error.textContent = "Password does not match the default password.";
+                pass_error.textContent = "Password does not match !";
                 pass_error.style.display = "block";
                 password.focus();
                 valid = false;
