--- a/Admin_login.html
+++ b/Admin_login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email and Password Validation</title>
+    <title>Admin Login</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
