--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <marquee> <span><b>E-Tecnology Nepal</b></span></marquee>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="home.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li>
                     <a href="#">Game</a>
                     <ul class="submenu">
