--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li>
                     <a href="#">Game</a>
                     <ul class="submenu">
-                        <li><a href="quiz.html">Quiz Game</a></li>
+                        <li><a href="Admin_login.html">Quiz Game</a></li>
                     </ul>
                 </li>
                 <li>
