--- a/Admin_login.html
+++ b/Admin_login.html
@@ -112,7 +112,7 @@
             event.preventDefault(); // Prevent the form from submitting
 
             if (validated()) {
-                window.location.href = "admin.html"; // Redirect if validation passes
+                window.location.href = "quiz.html"; // Redirect if validation passes
             }
         });
 
